[project]
name = "duckduckgo-mcp-server-stealth"
version = "0.4.0"
description = "MCP Server for searching via DuckDuckGo with browser-based anti-bot-detection"
readme = "README.md"
authors = [{ name = "Nick Clyde", email = "nick@clyde.tech" }]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "httpcore>=1.0.8",
    "mcp[cli]>=1.26.0",
    "scrapling>=0.4.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/nickclyde/duckduckgo-mcp-server-stealth"
Issues = "https://github.com/nickclyde/duckduckgo-mcp-server-stealth/issues"

# Optional extras. Install with e.g. `pip install duckduckgo-mcp-server-stealth[curl]`.
[project.optional-dependencies]
# Enables the `--search-backend curl` and `--fetch-backend curl` options, which use
# curl_cffi to impersonate a real browser's TLS fingerprint. Optional since the
# default browser backend (scrapling) is more reliable for DuckDuckGo search.
curl = ["curl_cffi>=0.7.0"]

[project.scripts]
duckduckgo-mcp-server = "duckduckgo_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duckduckgo_mcp_server"]

[dependency-groups]
dev = [
    "anyio>=4.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
]
